crates/crates_io_cargo_toml/tests/snapshots/autolib__other_override.snap
---
source: crates/crates_io_cargo_toml/tests/autolib.rs
expression: lib
---
Product {
    path: Some(
        "src/lib.rs",
    ),
    name: Some(
        "auto_lib",
    ),
    test: false,
    doctest: true,
    bench: true,
    doc: true,
    plugin: false,
    proc_macro: true,
    harness: true,
    edition: Some(
        E2018,
    ),
    required_features: [],
    crate_type: Some(
        [
            "lib",
        ],
    ),
}
